About Us lower nav bar below certain screen width to prevent overlap with logo

--- a/bootstrap_3.1.1/css/about-us.css
+++ b/bootstrap_3.1.1/css/about-us.css
@@ -52,6 +52,13 @@
 	text-align: center;
 }
 
+/* If screen width is below 800px, moves nav bar down so it does not interfere with logo */
+@media screen and (max-width: 770px) {
+    .nav {
+        padding-top: 20px;
+    }
+}
+
 ul {
 	list-style-type: none;
 	margin: 0;
